--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,14 @@
                     </execution>
                 </executions>
             </plugin>
+            
+            <!-- Exec plugin-->
+            
+            <plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>exec-maven-plugin</artifactId>
+    <version>3.1.0</version>
+</plugin>
 
             <!-- Maven Javadoc Plugin -->
             <plugin>
