--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,14 +24,6 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
@@ -39,9 +31,28 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      - name: Build Maven Project
+        run: mvn --batch-mode clean install package -DskipTests
+
+      - name: Run test cases
+        run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
+
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B jacoco:prepare-agent verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar jacoco:report -Dmaven.test.failure.ignore=true
+        run: >
+          mvn -B jacoco:prepare-agent verify
+          org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+          jacoco:report
+          -Dsonar.coverage.exclusions=**/Main.java
+          -Dsonar.projectKey=ImadAramanLib_IA-LIB3_2025
+          -Dsonar.organization=ImadAramanLib
 
