--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,22 +39,17 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
       - name: Build Maven Project
-        run: mvn --batch-mode clean install package -DskipTests
-
-      - name: Run test cases
-        run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
+        run: mvn --batch-mode clean install package -DskipTests -Dmaven.test.skip=true
 
       - name: Build and analyze
         continue-on-error: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: >
-          mvn -B jacoco:prepare-agent test
+          mvn -B clean compile
           org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-          jacoco:report
-          -Dmaven.test.failure.ignore=true
-          -Dsonar.coverage.exclusions=**/Main.java
+          -Dsonar.coverage.exclusions=**/Main.java,**/*Test.java
           -Dsonar.projectKey=ImadAramanLib_IA-LIB3_2025
           -Dsonar.organization=ImadAramanLib
+          -Dmaven.test.skip=true
 
