--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,15 +54,17 @@ jobs:
           fi
 
       - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         continue-on-error: true
         env:
           SONAR_TOKEN: ${{ secrets.ImadLib }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: >
-          mvn -B
-          org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-          -Dsonar.projectKey=ImadAramanLib_IA-LIB3_2025
-          -Dsonar.organization=imadaramanlib
-          -Dsonar.coverage.exclusions=**/Main.java,**/*Test.java,**/presentation/**,**/config/**,**/persistence/**,**/util/**
-          -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+        with:
+          projectBaseDir: .
+          args: >
+            -Dsonar.projectKey=ImadAramanLib_IA-LIB3_2025
+            -Dsonar.organization=imadaramanlib
+            -Dsonar.coverage.exclusions=**/Main.java,**/*Test.java,**/presentation/**,**/config/**,**/persistence/**,**/util/**
+            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+            -Dsonar.host.url=https://sonarcloud.io
 
