--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,18 +53,27 @@ jobs:
             echo "Report size: $(wc -l < target/site/jacoco/jacoco.xml) lines"
           fi
 
+      - name: Verify SonarCloud token
+        run: |
+          if [ -z "$SONAR_TOKEN" ]; then
+            echo "❌ ERROR: SONAR_TOKEN is not set!"
+            exit 1
+          else
+            echo "✅ SONAR_TOKEN is set (length: ${#SONAR_TOKEN} characters)"
+            echo "Token starts with: ${SONAR_TOKEN:0:10}..."
+          fi
+
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
         continue-on-error: true
         env:
-          SONAR_TOKEN: ${{ secrets.ImadLib }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          projectBaseDir: .
-          args: >
-            -Dsonar.projectKey=ImadAramanLib_IA-LIB3_2025
-            -Dsonar.organization=imadaramanlib
-            -Dsonar.coverage.exclusions=**/Main.java,**/*Test.java,**/presentation/**,**/config/**,**/persistence/**,**/util/**
-            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-            -Dsonar.host.url=https://sonarcloud.io
+        run: >
+          mvn -B
+          org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+          -Dsonar.projectKey=ImadAramanLib_IA-LIB3_2025
+          -Dsonar.organization=imadaramanlib
+          -Dsonar.host.url=https://sonarcloud.io
+          -Dsonar.coverage.exclusions=**/Main.java,**/*Test.java,**/presentation/**,**/config/**,**/persistence/**,**/util/**
+          -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
